testdata/baselines/reference/compiler/explicitMembersBeforeInherited.errors.txt
explicitMembersBeforeInherited(4,1): error TS1128: Declaration or statement expected.
explicitMembersBeforeInherited(4,25): error TS1128: Declaration or statement expected.
explicitMembersBeforeInherited(4,25): error TS1003: Identifier expected.
explicitMembersBeforeInherited(4,25): error TS1005: ';' expected.

==== explicitMembersBeforeInherited (4 errors) ====
    
    // https://github.com/microsoft/typescript-go/issues/1968
    
    type IndentationTree<L> = TopNode<L> | VirtualNode<L> | LineNode<L> | BlankNode<L>;
    ~~~~
!!! error TS1128: Declaration or statement expected.
                            ~
!!! error TS1128: Declaration or statement expected.
                            ~
!!! error TS1003: Identifier expected.
                            ~
!!! error TS1005: ';' expected.
    type IndentationSubTree<L> = Exclude<IndentationTree<L>, TopNode<L>>;
    
    interface NodeBase<L> {
    	subs: IndentationSubTree<L>[];
    }
    
    interface VirtualNode<L> extends NodeBase<L> {
    	type: 'virtual';
    }
    
    interface TopNode<L> extends NodeBase<L> {
    	type: 'top';
    }
    
    interface LineNode<L> extends NodeBase<L> {
    	type: 'line';
    }
    
    interface BlankNode<L> extends NodeBase<L> {
    	type: 'blank';
    }
    
